--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,22 +1,38 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "request": "launch",
-            "name": "Launch Program",
-            "type": "node",
-            "program": "${workspaceFolder}/main.ts",
-            "cwd": "${workspaceFolder}",
-            "runtimeExecutable": "/Users/crzidea/.deno/bin/deno",
-            "runtimeArgs": [
-                "run",
-                "--inspect-wait",
-                "--allow-all"
-            ],
-            "attachSimplePort": 9229
-        }
-    ]
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "request": "launch",
+      "name": "Launch Program",
+      "type": "node",
+      "program": "${workspaceFolder}/main.ts",
+      "cwd": "${workspaceFolder}",
+      "runtimeExecutable": "/Users/crzidea/.deno/bin/deno",
+      "runtimeArgs": ["run", "--inspect-wait", "--allow-all"],
+      "attachSimplePort": 9229
+    },
+    {
+      "request": "launch",
+      "name": "Test Current File",
+      "type": "node",
+      "program": "${workspaceFolder}/tests/${fileBasename}",
+      "cwd": "${workspaceFolder}",
+      "runtimeExecutable": "/Users/crzidea/.deno/bin/deno",
+      "runtimeArgs": ["test", "--inspect-wait", "--allow-all"],
+      "attachSimplePort": 9229
+    },
+    {
+      "request": "launch",
+      "name": "Generate Route Index",
+      "type": "node",
+      "program": "${workspaceFolder}/scripts/generate-route-index.ts",
+      "cwd": "${workspaceFolder}",
+      "runtimeExecutable": "/Users/crzidea/.deno/bin/deno",
+      "runtimeArgs": ["run", "--inspect-wait", "--allow-all"],
+      "attachSimplePort": 9229
+    }
+  ]
 }
