Make script excutable

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,7 +28,7 @@
       "request": "launch",
       "name": "Generate Route Index",
       "type": "node",
-      "program": "${workspaceFolder}/scripts/generate-route-index.ts",
+      "program": "${workspaceFolder}/scripts/generate-route-index",
       "cwd": "${workspaceFolder}",
       "runtimeExecutable": "/Users/crzidea/.deno/bin/deno",
       "runtimeArgs": ["run", "--inspect-wait", "--allow-all"],
